bk_ida/gccida/c2/scope_die_for
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scope_die_for/src/dwarf2out.c:10043:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( int)rtl[1]; 
           ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scope_die_for/src/dwarf2out.c:10058:44: error: use of undeclared identifier 'debug_info_level_0'
if ( ( v5 & 0x4000) == 0 && ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scope_die_for/src/obj/dwarf2out.o] Error 1
